# gats-r

./: .gitignore  Makefile  README.md  RESULTS.md  pyproject.toml  requirements.txt
paper/: PAPER.md  index.html
results/: isaaclab_benchmark_report.txt  isaaclab_raw.csv  isaaclab_summary.csv  raw.csv  summary.csv
scripts/: benchmark.py  demo.py  isaaclab_capture.py  isaaclab_smoke.py  make_figures.py  verify_claims.py  verify_isaaclab_claims.py
src/gatsr/: __init__.py  agent.py
src/gatsr/baselines/: __init__.py  dreamer_lite.py  lqr_agent.py  mppi_agent.py  random_agent.py  td_mpc2_lite.py
src/gatsr/envs/: __init__.py  balance_env.py
src/gatsr/monitoring/: __init__.py  monitor.py
src/gatsr/planning/: __init__.py  mcts.py  mppi.py  planner.py  skill_graph.py
src/gatsr/recovery/: __init__.py  recovery_graph.py  recovery_policy.py
src/gatsr/safety/: __init__.py  cbf.py  reachability.py
src/gatsr/utils/: __init__.py  logger.py  seed.py
src/gatsr/world_models/: __init__.py  analytic.py  fallback.py  latent.py  layered.py
tests/: conftest.py  test_end_to_end.py  test_envs.py  test_monitoring.py  test_planning.py  test_recovery.py  test_safety.py  test_world_models.py
